fix: collapse border

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,7 +1,6 @@
 .collapse {
   @extend %padding-md--v;
   border-top: 1px solid var(--color-grey);
-  border-bottom: 1px solid var(--color-grey);
   width: 100%;
   text-align: left;
   font-size: inherit;
@@ -29,9 +28,5 @@
 
   &__content {
     @extend %padding-md--top;
-  }
-
-  &:not(:last-child) {
-    border-bottom: unset;
   }
 }
